--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@vercel/analytics": "^1.5.0",
     "daisyui": "^4.12.23",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.477.0",
